--- a/package.json
+++ b/package.json
@@ -9,19 +9,53 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
+    "@clerk/themes": "^1.7.9",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.24.2",
+    "@tanstack/react-query-devtools": "^5.24.2",
+    "@trpc/client": "11.0.0-next-beta.303",
+    "@trpc/next": "11.0.0-next-beta.303",
+    "@trpc/react-query": "11.0.0-next-beta.303",
+    "@trpc/server": "11.0.0-next-beta.303",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
+    "emoji-picker-react": "^4.8.0",
+    "lucide-react": "^0.344.0",
+    "mongoose": "^8.2.0",
+    "next": "14.1.1",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.1"
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
+    "react-textarea-autosize": "^8.5.3",
+    "redux": "^5.0.1",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "sonner": "^1.4.3",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.15.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.1"
+    "typescript": "^5"
   }
 }
