--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "emoji-picker-react": "^4.8.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.0",
     "next": "14.1.1",
