--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@trpc/next": "11.0.0-next-beta.303",
     "@trpc/react-query": "11.0.0-next-beta.303",
     "@trpc/server": "11.0.0-next-beta.303",
+    "@uploadthing/react": "^6.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
@@ -47,6 +48,7 @@
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.5.2",
     "usehooks-ts": "^2.15.1",
     "zod": "^3.22.4"
   },
