--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.12.0",
+    "@blocknote/react": "^0.12.0",
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.9",
     "@radix-ui/react-alert-dialog": "^1.0.5",
