--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@blocknote/react": "^0.12.0",
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.9",
+    "@google/generative-ai": "^0.3.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,16 +29,19 @@
     "@trpc/react-query": "11.0.0-next-beta.303",
     "@trpc/server": "11.0.0-next-beta.303",
     "@uploadthing/react": "^6.3.4",
+    "ai": "^3.0.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "emoji-picker-react": "^4.8.0",
+    "langchain": "^0.1.26",
     "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
     "mongoose": "^8.2.0",
     "next": "14.1.1",
     "next-themes": "^0.2.1",
+    "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
